aws/EKS/deploy/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: thehive
  namespace: thehive
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thehive
  template:
    metadata:
      labels:
        app: thehive
    spec:
      hostname: thehive
      containers:
        - name: thehive
          image: strangebee/thehive:5.3.3-1
          imagePullPolicy: Always
          args:
          - --secret
          - "mySecretForTheHive"
          - "--cql-hostnames"
          - "cassandradb"
          - "--index-backend"
          - "elasticsearch"
          - "--es-hostnames"
          - "opensearch"
          ports:
          - containerPort: 9000
          resources:
            limits:
              cpu: 1
              memory: 1Gi
          volumeMounts:
          - name: thehive-data
            mountPath: "/opt/thp/thehive/files"
      volumes:
      - name: thehive-data
        persistentVolumeClaim:
          claimName: thehive-volume

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch
  namespace: thehive
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opensearch
  template:
    metadata:
      labels:
        app: opensearch
    spec:
      hostname: opensearch
      containers:
        - name: opensearch
          image: opensearchproject/opensearch:2.15.0
          imagePullPolicy: Always
          ports:
          - containerPort: 9200
          resources:
            limits:
              cpu: 1
              memory: 1.5Gi
          volumeMounts:
          - name: opensearch-data
            mountPath: "/usr/share/opensearch/data"
      volumes:
      - name: opensearch-data
        persistentVolumeClaim:
          claimName: opensearch-volume

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cassandradb
  namespace: thehive
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cassandradb
  template:
    metadata:
      labels:
        app: cassandradb
    spec:
      hostname: cassandradb
      containers:
        - name: cassandradb
          image: cassandra:4
          imagePullPolicy: Always
          ports:
          - containerPort: 9042
          resources:
            limits:
              cpu: 1
              memory: 1.5Gi
          volumeMounts:
          - name: cassndra-data
            mountPath: "/var/lib/cassandra"
      volumes:
      - name: cassndra-data
        persistentVolumeClaim:
          claimName: cassandra-volume
